--- a/Alert_Component.html
+++ b/Alert_Component.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <button class="btn btn-primary">Followers<span class="badge bg-secondary">200+</span></button>
-    <h3>Notification<span class="badge bg-primary">New</span></h3>
+    <div class="alert alert-danger">Download Failed!Please try again</div>
+    <div class="alert alert-success alert-dismissible">
+        Congratulations!You scored 50/50
+        <button class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
