--- a/Button_Group.html
+++ b/Button_Group.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <button class="btn btn-primary">Followers<span class="badge bg-secondary">200+</span></button>
-    <h3>Notification<span class="badge bg-primary">New</span></h3>
+    <div class="btn-group">
+        <button class="btn btn-primary">One</button>
+        <button class="btn btn-success">Two</button>
+        <button class="btn btn-danger">Three</button>
+    </div>
+    </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </body>
 </html>
